syntax = "proto3";

package chat;

service ChatReq {
    rpc ConnectServer(Req) returns (stream Msg);
    rpc SendMsg(Msg) returns (Empty);
}

message Req {
    string user_name = 1;
    string channel = 2;
  }

message Msg {
    string user_name = 1;
    string content = 2;
    string channel = 3;
    int64 timestamp = 4;
}

message Empty {}
